# fractal-rs

./: Cargo.toml  GEMINI.md  README.md  index.html
assets/: demo-Bl8YIZiL.js  demo-vwFBzs0T.js  fractal_rs_bg-XBhwvdx3.wasm  index-BJK-FJff.js  index-BUkWjV1e.js  index-BZtQreBn.css  index-CKcXsGMw.js  index-DmxWxZox.js
demo/: index.html
examples/: headless_check.rs
src/: lib.rs  shader.wgsl  webgpu_renderer.rs
src-tauri/: tauri.conf.json
tests/: wgsl_check.rs
tmp_deploy/fractal-rs/: index.html
tmp_deploy/fractal-rs/assets/: fractal_rs_bg-CEvKQU23.wasm  index-BLOSm7t5.js  index-CVYDE-7G.js
www/: .eslintrc.json  index.html  package-lock.json  package.json  test.html  vite.config.ts
www/demo/: index.html
www/src/: PreciseNumber.test.ts  PreciseNumber.ts  main.ts  style.css
